k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simpleapp
  labels:
    app.kubernetes.io/name: simpleapp
