k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp
  namespace: simpleapp
  labels:
    app.kubernetes.io/name: simpleapp
    app.kubernetes.io/source: https://github.com/karimakhter/simpleapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: simpleapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simpleapp
    spec:
      containers:
        - name: simpleapp
          image: simpleapp:0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
